big update du projet

--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,8 @@ services:
       - /var/www/node_modules
     networks:
       - myMood
+    env_file:
+      - .env
   maildev:
     image: maildev/maildev
     ports:
