--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "generate-password": "^1.7.1",
